--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-  <div class="preloader"></div>
 <div class="advantages-background">
 
     <div class="fixed-wrapper advantages">
@@ -39,14 +38,16 @@
   <div class="logo-slider fixed-wrapper">
     
     <div class="logo-slider__wrapper" >
+      <span class="logo-slider__arrow-left fa fa-2x fa-chevron-left" aria-hidden="true"></span>
       <ul class="logo-slider__list">
-	<li><img alt="" src="img/main/beautifulspiralLogo.png"/></li>
-	<li><img alt="" src="img/main/bowtieLogo.png"/></li>
-	<li><img alt="" src="img/main/circlemeLogo.png"/></li>
-	<li><img alt="" src="img/main/crossinglinesLogo.png"/></li>
-	<li><img alt="" src="img/main/mountainsLogo.png"/></li>
-	<li><img alt="" src="img/main/beautifulspiralLogo.png"/></li>
+	<li><img alt="Company Logo" width="214" height="70" src="img/main/beautifulspiralLogo.png"/></li>
+	<li><img alt="Company Logo" width="94" height="70" src="img/main/bowtieLogo.png"/></li>
+	<li><img alt="Company Logo" width="96" height="70" src="img/main/circlemeLogo.png"/></li>
+	<li><img alt="Company Logo" width="121" height="70" src="img/main/crossinglinesLogo.png"/></li>
+	<li><img alt="Company Logo" width="129" height="70" src="img/main/mountainsLogo.png"/></li>
+	<li><img alt="Company Logo" width="214" height="70" src="img/main/beautifulspiralLogo.png"/></li>
       </ul>
+       <span class="logo-slider__arrow-right fa fa-2x fa-chevron-right" aria-hidden="true"></span>
     </div>
     
   </div>
