--- a/our-team.html
+++ b/our-team.html
@@ -13,108 +13,108 @@
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="F" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="R" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="T" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="P" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/dr.jpg"/>
+    <img class="our-team__photo" src="img/our-team/dr.jpg"/>
     <h3 class="our-team__title">Nathan Walker</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Facebook" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/college-girl.jpg"/>
+    <img class="our-team__photo" width="225" height="225" alt="Employee photo" src="img/our-team/college-girl.jpg"/>
     <h3 class="our-team__title">Valerie Wilson</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Facebook" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/goat.jpg"/>
+    <img class="our-team__photo" width="225" height="225" alt="Employee photo" src="img/our-team/goat.jpg"/>
     <h3 class="our-team__title">Hope Russell</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Facebook" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/mode.jpg"/>
+    <img class="our-team__photo" width="225" height="225" alt="Employee photo" src="img/our-team/mode.jpg"/>
     <h3 class="our-team__title">Pedro Pierce</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Facebook" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/real.jpg"/>
+    <img class="our-team__photo" width="225" height="225" alt="Employee photo" src="img/our-team/real.jpg"/>
     <h3 class="our-team__title">Carolyn Figueroa</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Facebook" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/thai.jpg"/>
+    <img class="our-team__photo" width="225" height="225" alt="Employee photo" src="img/our-team/thai.jpg"/>
     <h3 class="our-team__title">Alberta Dennis</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Facebook" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   <section class="our-team__unit">
-    <img class="our-team__photo" alt="" src="img/our-team/r2d2.png"/>
+    <img class="our-team__photo" width="225" height="225" alt="Employee photo" src="img/our-team/r2d2.png"/>
     <h3 class="our-team__title">Alberta Dennis</h3>
     <p>Interdum varius sit amet.
       Eu non diam phasellus.
       Est ultricies integer quis!
       Elit ullamcorper dignissim!</p>
     <ul class="team-soc-links">
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Facebook.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/RSS.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Twitter.png"/></a></li>
-      <li><a href=""><img alt="" src="img/our-team/soc-links/Pinterest.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Faceboo" src="img/our-team/soc-links/Facebook.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="RSS" src="img/our-team/soc-links/RSS.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Twitter" src="img/our-team/soc-links/Twitter.png"/></a></li>
+      <li><a href=""><img width="15" height="15" alt="Pinterest" src="img/our-team/soc-links/Pinterest.png"/></a></li>
     </ul>
   </section>
   
